fluxcd-intro/manifests/debug-display-req-headers/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug-display-req-headers
  namespace: ip812
  labels:
    app: debug-display-req-headers
spec:
  replicas: 3
  selector:
    matchLabels:
      app: debug-display-req-headers
  template:
    metadata:
      labels:
        app: debug-display-req-headers
    spec:
      containers:
        - name: debug-display-envs
          image: iypetrov/debug-display-req-headers:1.2.0 # {"$imagepolicy": "flux-system:debug-display-req-headers-img-policy"}
          ports:
            - containerPort: 8080
              protocol: TCP
