fluxcd-intro/manifests/debug-display-req-headers/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: debug-display-req-headers-ing-rules
  namespace: ip812
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`template.ip812.com`)
      kind: Rule
      services:
        - name: debug-display-req-headers-svc
          port: 80
